--- a/src/app/pages/test-page/test-page.component.html
+++ b/src/app/pages/test-page/test-page.component.html
@@ -1,3 +1,36 @@
-<p>
-  test-page works!
-</p>
+<!--<div>
+  <form action="http://localhost:8080//api/v1/member/newMember" method="post">
+    <label for="memberId">아이디 : </label>
+    <input type="text" id="memberId" name="memberId"/>
+    <label for="memberName">이름 : </label>
+    <input type="text" id="memberName" name="memberName">
+    <i class="nb-checkmark">저장</i>
+  </form>
+</div>-->
+
+<!--<div class="row">
+  <div class="col-md-12">
+    <nb-card class="inline-form-card">
+      <nb-card-header>Inline form</nb-card-header>
+      <nb-card-body>
+        <form class="form-inline">
+          <input type="text" class="col-md-6 form-control full-width" placeholder="아이디">
+          <input type="text" class="col-md-6 form-control full-width" placeholder="이름">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </nb-card-body>
+    </nb-card>
+  </div>
+</div>-->
+
+
+<nb-card>
+  <nb-card-header>
+    Smart Table
+  </nb-card-header>
+
+  <nb-card-body>
+    <ng2-smart-table [settings]="settings" [source]="source" (deleteConfirm)="onDeleteConfirm($event)">
+    </ng2-smart-table>
+  </nb-card-body>
+</nb-card>
